feat: added loader and fix GUI folders

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <div class="loader-container">
+        <h6 class="loader-text">Loading</h6>
+        <div class="loader">
+            <div class="loader-main"></div>
+        </div>
+        <h6 class="loader-text" id="load-percentage">0%</h6>
+    </div>
 
     <script src="./src/main.js" type="module"></script>
 </body>
